add medical facility opening hours component

--- a/force-app/main/default/lwc/medicalFacilityOpeningHours/medicalFacilityOpeningHours.html
+++ b/force-app/main/default/lwc/medicalFacilityOpeningHours/medicalFacilityOpeningHours.html
@@ -1,7 +1,15 @@
 <template>
-  <lightning-card title="Medical Facility Opening Hours">
-    <lightning-button label="New" slot="actions"></lightning-button>
-    <p class="slds-p-horizontal_small">Card Body (custom component)</p>
-    <p slot="footer">Card Footer</p>
+  <lightning-card class="title" title="Medical Facility Opening Hours">
+    <template lwc:if={facility.data}>
+      <div class="week-days">
+        <div>Monday: {monday}</div>
+        <div>Tuesday: {tuesday}</div>
+        <div>Wednesday: {wednesday}</div>
+        <div>Thursday: {thursday}</div>
+        <div>Friday: {friday}</div>
+        <div>Saturday: {saturday}</div>
+        <div>Sunday: {sunday}</div>
+      </div>
+    </template>
   </lightning-card>
 </template>
