--- a/force-app/main/default/lwc/filtringByAccessibilityAndFacility/filtringByAccessibilityAndFacility.html
+++ b/force-app/main/default/lwc/filtringByAccessibilityAndFacility/filtringByAccessibilityAndFacility.html
@@ -4,7 +4,7 @@
         <div class="slds-m-around_medium">
             <lightning-combobox
                 name="facilitySelection"
-                label="Choose facility"
+                label="Select facility"
                 value={selectedFacilityId}
                 options={facilitisOptions}
                 onchange={handleFacilityChange}>
@@ -25,7 +25,7 @@
         <div class="slds-m-around_medium">
             <lightning-combobox
                 name="doctorSelection"
-                label="Wybierz lekarza"
+                label="Select doctor"
                 value={selectedDoctorId}
                 options={doctorOptions}
                 onchange={handleDoctorChange}
