--- a/force-app/main/default/lwc/filtringByAccessibilityAndFacility/filtringByAccessibilityAndFacility.html
+++ b/force-app/main/default/lwc/filtringByAccessibilityAndFacility/filtringByAccessibilityAndFacility.html
@@ -1,15 +1,5 @@
 <template>
-    <lightning-card title="Book an appointment">
-
-        <div class="slds-m-around_medium">
-            <lightning-combobox
-                name="personSelection"
-                label="Select person for a medical appointment"
-                value={selectedPatientId}
-                options={patientsOptions}
-                onchange={handlePatientChange}>
-            </lightning-combobox>
-        </div>
+    <lightning-card title="Edit an appointment">
 
         <div class="slds-m-around_medium">
             <lightning-combobox
