adding bot and class for bot handle

--- a/force-app/main/default/lwc/appointmentEdit/appointmentEdit.html
+++ b/force-app/main/default/lwc/appointmentEdit/appointmentEdit.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card title="Book an appointment">
+    <lightning-card title="Edit an appointment">
 
         <div class="slds-m-around_medium">
             <lightning-combobox
