adding possibilty to see record ones edit

--- a/force-app/main/default/lwc/appointmentEdit/appointmentEdit.html
+++ b/force-app/main/default/lwc/appointmentEdit/appointmentEdit.html
@@ -47,7 +47,7 @@
             <lightning-input
                 type="datetime-local"
                 label="Select date and time"
-                value={selectedDateTime}
+                value={dateTimeString}
                 onchange={handleDateTimeChange}>
             </lightning-input>
         </div>
