--- a/force-app/main/default/lwc/appointmentEdit/appointmentEdit.html
+++ b/force-app/main/default/lwc/appointmentEdit/appointmentEdit.html
@@ -6,7 +6,7 @@
                 name="appointmentStatusSelection"
                 label="Choose appointment status"
                 value={selectedAppointmentStatus}
-                options={appointmentStatusPicklistOptions}
+                options={appointmentStatusOptions}
                 onchange={handleAppointmentStatusChange}>
             </lightning-combobox>
         </div>
@@ -16,7 +16,7 @@
                 name="facilitySelection"
                 label="Select facility"
                 value={selectedFacilityId}
-                options={facilitiesOptions}
+                options={facilities}
                 onchange={handleFacilityChange}>
             </lightning-combobox>
         </div>
@@ -26,7 +26,7 @@
                 name="specializationSelection"
                 label="Choose specialization"
                 value={selectedSpecializationId}
-                options={specializationOptions}
+                options={specializations}
                 onchange={handleSpecializationChange}
                 disabled={isSpecializationDisabled}>
             </lightning-combobox>
@@ -37,7 +37,7 @@
                 name="doctorSelection"
                 label="Select doctor"
                 value={selectedDoctorId}
-                options={doctorOptions}
+                options={doctors}
                 onchange={handleDoctorChange}
                 disabled={isDoctorDisabled}>
             </lightning-combobox>
@@ -65,7 +65,7 @@
 
         <div class="slds-m-around_medium">
             <lightning-button
-                label="Book Appointment"
+                label="Edit Appointment"
                 variant="brand"
                 onclick={handleAppointmentBooking}
                 disabled={isBookDisabled}>
