--- a/force-app/main/default/lwc/appointmentEdit/appointmentEdit.html
+++ b/force-app/main/default/lwc/appointmentEdit/appointmentEdit.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card title="Book an appointment">
+    <lightning-card title="Edit an appointment">
 
         <div class="slds-m-around_medium">
             <lightning-combobox
@@ -45,11 +45,19 @@
 
         <div class="slds-m-around_medium">
             <lightning-input
-                type="datetime-local"
+                type="date"
                 label="Select date and time"
                 value={dateTimeString}
                 onchange={handleDateTimeChange}>
             </lightning-input>
+
+            <lightning-combobox
+                name="timeSelection"
+                label="Choose time"
+                value={selectedTime}
+                options={times}
+                onchange={handleTimeChange}>
+            </lightning-combobox>
         </div>
 
         <div class="slds-m-around_medium">
