final changes for appointments

--- a/force-app/main/default/lwc/appointmentEdit/appointmentEdit.html
+++ b/force-app/main/default/lwc/appointmentEdit/appointmentEdit.html
@@ -47,7 +47,7 @@
             <lightning-input
                 type="date"
                 label="Select date and time"
-                value={dateTimeString}
+                value={dateString}
                 onchange={handleDateTimeChange}>
             </lightning-input>
 
